--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+   <header>
+       <div class="conteiner">
+           <div class="logo">
+                <img src="./img/logo.png" alt="logo">
+           </div>
+       </div>
+   </header>
 </body>
 </html>
