create button ADD MOVIE

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
            <div class="logo">
                 <img src="./img/logo.png" alt="logo">
            </div>
+           <div>
+                <button type="button">ADD MOVIE</button>
+           </div>
        </div>
    </header>
 </body>
