--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <button type="button">ADD MOVIE</button>
            </div>
        </div>
+
+       <h1>FIND YOUR MOVIE</h1>
    </header>
 </body>
 </html>
