create form SEARCH

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
        </div>
 
        <h1>FIND YOUR MOVIE</h1>
+
+       <form>
+           <input type="text" placeholder="What do you want to watch">
+           <button type="submit">SEARCH</button>
+       </form>
    </header>
 </body>
 </html>
