--- a/index.html
+++ b/index.html
@@ -24,5 +24,16 @@
            <button type="submit">SEARCH</button>
        </form>
    </header>
+   <div class="menu-bar">
+       <nav>
+            <ul>
+                <li><a href="1">ALL</a></li>
+                <li><a href="2">DOCUMENTARY</a></li>
+                <li><a href="3">COMEDY</a></li>
+                <li><a href="4">HORROR</a></li>
+                <li><a href="5">CRIVE</a></li>
+            </ul>                        
+       </nav>
+   </div>
 </body>
 </html>
