create content container

--- a/index.html
+++ b/index.html
@@ -45,6 +45,75 @@
             </select>
         </form>
     </div>
+    <div class="count">
+        <div id="results-count-label">
+            39 movies found
+        </div>        
+    </div>
+    <div id="content-container" class="results">
+        <div class="container-expanded">
+            <a class="item-init" href="Pulp Fiction" data-title="Pulp Fiction">
+                <div class="img" style="background-image: ">
+                    <img src="./img/pulp-fiction.png" alt="pulp-fiction">
+                </div>
+                <div class="info">
+                    <h3>Pulp Fiction</h3>
+                    <ul class="year-genres">
+                        <li class="year">2004</li>
+                        <li class="genre">Action & Adventures</li>
+                    </ul>                                
+                </div>
+            </a>
+            <form>
+                <select name="" id="">
+                    <option value="1"></option>
+                    <option value="2"></option>
+                    <option value="3"></option>
+                </select>
+            </form>
+            <a class="item-init" href="Bohemian Rhapsody" data-title="Bohemian Rhapsody">
+                <div class="img" style="background-image: ">
+                    <img src="./img/bohemian-rhapsody.png" alt="Bohemian Rhapsody">
+                </div>
+                <div class="info">
+                    <h3>Bohemian Rhapsody</h3>
+                    <ul class="year-genres">
+                        <li class="year">2003</li>
+                        <li class="genre">Drama</li>
+                        <li class="genre">Biography</li>
+                        <li class="genre">Music</li>
+                    </ul>                                
+                </div>
+            </a>
+            <form>
+                <select name="" id="">
+                    <option value="1"></option>
+                    <option value="2"></option>
+                    <option value="3"></option>
+                </select>
+            </form>
+            <a class="item-init" href="Kill Bill vol.2" data-title="Kill Bill vol.2">
+                <div class="img" style="background-image: ">
+                    <img src="./img/kill-bill-2.png" alt="Kill Bill vol.2">
+                </div>
+                <div class="info">
+                    <h3>Kill Bill: vol.2</h3>
+                    <ul class="year-genres">
+                        <li class="year">1994</li>
+                        <li class="genre">Oscar winning movie</li>
+                    </ul>                                
+                </div>
+            </a>
+            <form>
+                <select name="" id="">
+                    <option value="1"></option>
+                    <option value="2"></option>
+                    <option value="3"></option>
+                </select>
+            </form>
+        </div>
+        
+    </div>
 </body>
 
 </html>
