--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
+    
 </head>
 
 <body>
@@ -15,14 +17,14 @@
                 <img src="./img/logo.png" alt="logo">
             </div>
             <div>
-                <button type="button">ADD MOVIE</button>
+                <button class="btn" type="button">+add movie</button>
             </div>
         </div>
 
         <h1>FIND YOUR MOVIE</h1>
 
         <form>
-            <input type="text" placeholder="What do you want to watch">
+            <input class="search-input" type="text" placeholder="What do you want to watch">
             <button type="submit">SEARCH</button>
         </form>
     </header>
