--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div class="conteiner">
+        <div class="container">
             <div class="logo">
                 <img src="./img/logo.png" alt="logo">
             </div>
