add song with different fonts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Netflix</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -44,6 +45,50 @@
                 <option value="3">SORT 3</option>
             </select>
         </form>
+    </div>
+    <div class="song">
+        <p style="font-family: Mulish;">
+            N.R.M.<br>
+            «Тры чарапахi»<br>
+            <br>
+            Калi раптам адчуеш камунальныя пахi<br>
+            I жыцьцё цябе возьме ў пятлю.<br>
+            Зразумееш тады, што тры чарапахi<br>
+            Па ранейшаму цягнуць Зямлю.<br>
+            Калi выйдзеш у горад, цi залезеш у горы,<br>
+            I з людзьмi ўсталюеш кантакт.<br>
+            Зразумееш тады, што i сёньня i ўчора<br>
+            Наша месца на трох кiтах.<br>
+        </p>
+        <p style="font-family: Cormorant;">
+            Прыпеў:<br>
+            Гэй, ла-ла-ла-лай, ты не чакай, сюрпрызаў ня будзе.<br>
+            Гэй, ла-ла-ла-лай, ты не чакай, ты не чакай.<br>
+        </p>
+        <p style="font-family: Mulish;">
+            Не было Галелея i Боба Марлея,<br>
+            Не было Сальвадора Далi.<br>
+            Нi Ленiна, нi Ленана, нi Карла Лiнэя,<br>
+            А кiты, чарапахi былi.<br>
+        </p>
+        <p style="font-family: Cormorant;">
+            Прыпеў:<br>
+            Гэй, ла-ла-ла-лай, ты не чакай, сюрпрызаў ня будзе.<br>
+            Гэй, ла-ла-ла-лай, ты не чакай, ты не чакай.<br>
+        </p>
+        <p style="font-family: Mulish;">
+            Каб любiць Беларусь, нашу мiлую Маму,<br>
+            Трэба ў розных краях пабываць!<br>
+            Зразумееш тады - пад тваiмi нагамi<br>
+            Тры сланы нерухома стаяць.<br>
+        </p>
+        <p style="font-family: Cormorant;">
+            Прыпеў:<br>
+            Гэй, ла-ла-ла-лай, ты не чакай, сурпрызаў ня будзе.<br>
+            Гэй, ла-ла-ла-лай, нiхто не чакае, i ты не чакай!<br>
+        </p>
+        <p>&#169; Словы і музыка: Лявон Вольскі</p>
+
     </div>
 </body>
 
