creating a rubber background

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix</title>
+    <title>Homeworks</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -89,6 +89,56 @@
         </p>
         <p>&#169; Словы і музыка: Лявон Вольскі</p>
 
+    </div>
+    <div style="background: url('./img/middle-hor.png') repeat-x left top">
+        <div style="background: url('./img/middle-hor.png') repeat-x left bottom">
+            <div style="background: url('./img/middle-vert.png') repeat-y left top">
+                <div style="background: url('./img/middle-vert.png') repeat-y right top">
+                    <div style="background: url('./img/left-top.png') no-repeat left top">
+                        <div style="background: url('./img/right-top.png') no-repeat right top">
+                            <div style="background: url('./img/right-bottom.png') no-repeat right bottom">
+                                <div style="background: url('./img/left-bottom.png') no-repeat left bottom">
+                                    <div style="font-family: Mulish; font-size: 15px; padding: 50px">
+                                        Дакладныя звесткі пра колькасны склад насельніцтва Гомеля ў розныя перыяды яго
+                                        гісторыі
+                                        адсутнічаюць. Аднак інвентар 1681 г. дае магчымасць правесці некаторыя падлікі.
+                                        Паводле гэтага дакумента, у Гомелі мелася 165 «дымоў» — двароў-гаспадарак.
+                                        Калі зыходзіць з таго, што сярэднестатыстычная тагачасная сям’я складалася з 6
+                                        чалавек,
+                                        то колькасць гаспадароў двароў і іх дамачадцаў будзе каля 1000 чалавек.
+                                        Аднак агульная колькасць гараджан, напэўна, была большай і набліжалася да 1100
+                                        чалавек
+                                        (у інвентары не ўлічаны сем’і, якія не мелі юрыдычных правоў на ўчасткі
+                                        гарадской зямлі,
+                                        а таксама асобы, што жылі на землях свецкіх і духоўных феадалаў). Такім чынам,
+                                        Гомель канца XVII ст. быў хутчэй не горадам, а мястэчкам (шэраг даследчыкаў
+                                        «ніжэйшы парог»
+                                        колькасці насельніцтва для гарадоў ВКЛ вызначаюць у 1500 ча­лавек). <br>
+                                        Разам з тым дэмаграфічная сітуацыя канца XVII ст. наўрад ці была характэрнай для
+                                        XVI і
+                                        пачатку XVII ст. Другая палова XVII ст. — час страшэннай разрухі і запусцення,
+                                        што сталі
+                                        вынікам дваццацігадовай сму­ты (1648-1667 гг.). Вядома, што ў гэты перыяд гарады
+                                        Полацкага,
+                                        Віцебскага і Мсціслаўскага ваяводстваў ВКЛ страцілі да палавіны, а то i больш
+                                        сваіх
+                                        двароў-гаспадарак i насельніцтва. Гомель жа ў той час знаходзіўся ў самым цэнтры
+                                        баявых
+                                        дзеянняў, i таму яго людскія страты былі асабліва вялікія. Калі яны набліжаліся
+                                        да
+                                        максімальных, то колькасць гарадскога насельніцтва на пачатак XVII ст. можна
+                                        вызначыць
+                                        лічбай у некалькі тысяч чалавек. Напэўна, столькі ж жыхароў Гомель меў і ў
+                                        пераважна
+                                        спрыяльныя для яго развіцця гады сярэдзіны XVI ст.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
