--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 </head>
 
 <body>
+    <form>
+        <label for="star-1">Star 1</label>
+        <input id="star-1" class="star" type="radio" name="star">
+ 
+        <label for="star-2">Star 2</label>
+        <input id="star-2" class="star" type="radio" name="star">
+
+        <label for="star-3">Star 3</label>
+        <input id="star-3" class="star" type="radio" name="star">
+ 
+        <label for="star-4">Star 4</label>
+        <input id="star-4" class="star" type="radio" name="star">
+ 
+        <label for="star-5">Star 5</label>
+        <input id="star-5" class="star" type="radio" name="star">
+
+        <input type="checkbox" name="checkbox">
+        <input type="checkbox" name="checkbox">
+        <input type="checkbox" name="checkbox">
+        <input type="checkbox" name="checkbox">
+        <input type="checkbox" name="checkbox">
+    </form>
     <header>
         <div class="conteiner">
             <div class="logo">
@@ -90,6 +112,7 @@
         <p>&#169; Словы і музыка: Лявон Вольскі</p>
 
     </div>
+
 </body>
 
 </html>
